# unstructured.PaddleOCR

./: README.md  pyproject.toml  requirements.txt  setup.py
deploy/cpp_infer/: readme.md
deploy/hubserving/kie_ser/: module.py
deploy/hubserving/kie_ser_re/: module.py
deploy/hubserving/ocr_cls/: module.py
deploy/hubserving/ocr_det/: module.py
deploy/hubserving/ocr_rec/: module.py
deploy/hubserving/ocr_system/: module.py
deploy/hubserving/structure_layout/: module.py
deploy/hubserving/structure_system/: module.py
deploy/hubserving/structure_table/: module.py
deploy/slim/quantization/: export_model.py
docs/ppocr/: quick_start.md
docs/ppocr/blog/: whl.en.md  whl.md
unstructured_paddleocr/: __init__.py  paddleocr.py  unstructured_paddleocr.py
unstructured_paddleocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
unstructured_paddleocr/paddle_tools/: eval.py  infer_rec.py
unstructured_paddleocr/paddle_tools/infer/: predict_det.py  predict_rec.py  predict_system.py
unstructured_paddleocr/ppocr/data/: __init__.py
unstructured_paddleocr/ppocr/data/imaug/: copy_paste.py
unstructured_paddleocr/ppocr/utils/: utility.py
unstructured_paddleocr/ppstructure/: predict_system.py  utility.py
unstructured_paddleocr/ppstructure/kie/: predict_kie_token_ser.py
unstructured_paddleocr/ppstructure/pdf2word/: pdf2word.py
unstructured_paddleocr/ppstructure/recovery/: README.md  README_ch.md
unstructured_paddleocr/unstructured_paddleocr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
