[build-system]
requires = ["setuptools==72.1.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unstructured_paddleocr"
# After each version release, the version number needs to be incremented
dynamic = ["version"]
description = "Awesome OCR toolkits based on PaddlePaddle(8.6M ultra-lightweight pre-trained model, support training and deployment among server, mobile, embedded and IoT devices)"
authors = [
    {name = "PaddlePaddle", email = "Paddle-better@baidu.com"},
]
maintainers = [
    {name = "PaddlePaddle", email = "Paddle-better@baidu.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "ocr",
    "textdetection",
    "textrecognition",
    "paddleocr",
    "crnn",
    "east",
    "star-net",
    "rosetta",
    "ocrlite",
    "db",
    "chineseocr",
    "chinesetextdetection",
    "chinesetextrecognition",
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "shapely",
    "scikit-image",
    "pyclipper",
    "tqdm",
    "numpy",
    "rapidfuzz",
    "opencv-python",
    "opencv-contrib-python",
    "cython",
    "Pillow",
    "pyyaml",
    "python-docx",
    "beautifulsoup4",
    "fonttools>=4.24.0",
    "fire>=0.3.0",
    "requests",
    "albumentations",
    # to be compatible with albumentations
    "albucore"
]

[project.urls]
homepage = "https://github.com/UnstructureIO/unstructured.PaddleOCR"
documentation = "https://github.com/UnstructureIO/unstructured.PaddleOCR/blob/main/README.md"
repository = "https://github.com/UnstructureIO/unstructured.PaddleOCR.git"

[project.scripts]
paddleocr = "unstructured_paddleocr.unstructured_paddleocr:main"

[tool.setuptools]
packages = ["unstructured_paddleocr", "unstructured_paddleocr.tools", "unstructured_paddleocr.tools.end2end", "unstructured_paddleocr.tools.infer"]
include-package-data = true

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'
